--- a/css/style.css
+++ b/css/style.css
@@ -18,4 +18,20 @@
 .navbar-nav li a{
     color: #fff !important;
     font-weight: 600;
+    float: right;
+    text-align: left;
+}
+
+.navbar-brand{
+    color: #fff !important;
+    font-weight: 800;
+}
+
+.fa-bars{
+    color: #fff !important;
+    font-size: 30px !important;
+}
+
+.navbar-toggler{
+    outline: none !important;
 }
