--- a/css/style.css
+++ b/css/style.css
@@ -41,4 +41,9 @@
     color: #fff;
     padding-top: 5%;
 }
+..promo-title{
+    font-size: 40px;
+    font-weight: 600;
+    margin-top: 100px;
+}
 
